--- a/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
+++ b/src/app/modules/home/components/todo-input-add-itens/todo-input-add-itens.component.html
@@ -1,1 +1,6 @@
-<p>todo-input-add-itens works!</p>
+<input
+  type="text"
+  placeholder="Enter your new task here..."
+  [(ngModel)]="addItemTaskList"
+  (keyup.enter)="submitItemTaskList()"
+/>
