--- a/src/app/modules/home/components/todo-list/todo-list.component.html
+++ b/src/app/modules/home/components/todo-list/todo-list.component.html
@@ -1,1 +1,18 @@
-<p>todo-list works!</p>
+<section [ngClass]="{ loading: !taskList.length }">
+  <ul *ngIf="taskList.length">
+    <li *ngFor="let item of taskList; let i = index">
+      <input type="checkbox" [(ngModel)]="item.checked" />
+      <input type="text" [(ngModel)]="item.task" [ngClass]="{'checked': item.checked}" (keyup)="validationInput(item.task, i)" />
+
+      <button (click)="deletemItemTaskList(i)">
+        <img src="assets/icons/trash.svg" alt="trash" />
+      </button>
+    </li>
+  </ul>
+</section>
+
+<app-todo-input-add-itens (emitItemTaskList)="setEmitTaskList($event)" />
+<app-todo-button-delete-all
+  *ngIf="taskList.length"
+  (click)="deleteAllTaskList()"
+/>
